fix modal scrollbar

--- a/src/styles/components/modal.css
+++ b/src/styles/components/modal.css
@@ -5,14 +5,14 @@
     width: 100vw;
     width: 100dvw;
 
-    height: 100vh;
-    height: 100dvh;
+    height: calc(100vh - (var(--large-padding) * 4));
+    height: calc(100dvh - (var(--large-padding) * 4));
 
     align-items: center;
     justify-content: center;
 
     background-color: rgba(var(--light-rgb), .75);
-    padding-top: calc(var(--large-padding) * 4);
+    margin-top: calc(var(--large-padding) * 4);
 
     opacity: 0;
     z-index: -10;
